Add more support for docker registry
